Fix where-to-watch on IE11
IE11 seems to be a bit stupid when it comes to width:auto
The svg's are now limited by their wrapping a and li tag,
where li is just limited to ~almost a fourth, since we don't
explicitly space elements but rely on the default inline
spacing for now.

--- a/app/styles/layout/_cover-images.scss
+++ b/app/styles/layout/_cover-images.scss
@@ -232,8 +232,10 @@
   margin-top: 15px;
   li {
     display: inline-block;
+    max-width: 23.5%;
   }
   a {
+    max-width: 100%;
     display: inline-block;
     background: $white;
     padding: 8px;
